[package]
name = "multi-vehicle-search"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
phf = { version = "0.11", features = ["macros"] }
phf_macros = "0.11.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
